# cryptographie_vibe

./: .editorconfig  .env.example  .gitignore  .pylintrc  COMMANDS.md  GUIDE_SIMPLE.md  JOUR1_PARTIE1.md  JOUR2_PARTIE1.md  LICENSE  MANUAL_TESTING.md  Makefile  ORCHESTRATION.md  PROJECT_STATE.md  PROMPT_COMPLET.md  README.md  TESTING_QUICK_REFERENCE.md  pyproject.toml  requirements.txt  setup.sh
.github/: CODEOWNERS
.github/workflows/: tests.yml
data/: md5_decrypted.txt  password_rules.json  this_is_safe.txt  user_keys_do_not_steal_plz.txt
data/logs/: log_2026-04-14_13-23-09.txt  log_2026-04-14_13-47-28.txt  log_2026-04-14_13-48-51.txt  log_2026-04-14_13-53-30.txt  log_2026-04-14_13-53-54.txt  log_2026-04-14_13-54-11.txt  log_2026-04-14_13-54-33.txt  log_2026-04-14_13-54-48.txt  log_2026-04-14_13-55-18.txt  log_2026-04-14_13-55-35.txt  log_2026-04-14_14-11-44.txt  log_2026-04-14_14-12-16.txt  log_2026-04-14_14-12-31.txt  log_2026-04-14_14-30-56.txt  log_2026-04-14_14-33-56.txt  log_2026-04-14_16-51-46.txt  log_2026-04-15_09-47-13.txt  log_2026-04-15_10-02-29.txt  log_2026-04-15_10-04-14.txt  log_2026-04-15_10-05-46.txt  log_2026-04-15_10-11-08.txt  log_2026-04-15_10-12-02.txt  log_2026-04-15_10-12-47.txt  log_2026-04-15_10-25-58.txt  log_2026-04-15_10-32-58.txt  log_2026-04-16_10-58-07.txt  log_2026-04-16_11-11-22.txt  log_2026-04-16_11-15-41.txt  log_2026-04-16_11-34-59.txt  log_2026-04-16_12-02-46.txt
docs/: COMMENCER_ICI.md  CONTRIBUTING.md  DEVELOPMENT.md  INDEX.md  INSTALLATION_WSL.md  JOUR1_PARTIE2.md  JOUR3_PARTIE1.md  PREREQUISITES.md  README.md  crypto_vibeness.md
docs/Ressource_vibe/: AGENT.md  CONFIG.md  GUIDE_CLAUDE.md  JOUR2_PARTIE2.md  JOUR3_PARTIE2.md  PROJECT_STATE.md
src/: client.py  server.py
tests/: test_day1_part1.py  test_jour1_partie2_auth.py  test_jour1_partie2_integration.py  validate_jour1_partie1.py  validate_jour1_partie2.py  validate_jour2_partie1.py  validate_jour2_partie2.py  validate_jour3_partie1.py  validate_jour3_partie2.py
(+17 files in other folders)
